update button - fix background color in hover mode that are not visible.

--- a/Bubble-Darker-Red/gtk-3.0/gtk.css
+++ b/Bubble-Darker-Red/gtk-3.0/gtk.css
@@ -251,7 +251,7 @@ button {
   button:hover {
     color: #342828;
     border-color: #cfd6e6;
-    background-color: white;
+    background-color: #f0f0f0;
     -gtk-icon-effect: highlight; }
   button:active, button:checked {
     color: #f8f7f7;
@@ -462,7 +462,7 @@ button {
   .inline-toolbar toolbutton > button:hover {
     color: #342828;
     border-color: #cfd6e6;
-    background-color: white; }
+    background-color: #f0f0f0; }
   .inline-toolbar toolbutton > button:active, .inline-toolbar toolbutton > button:checked {
     color: #f8f7f7;
     border-color: #AF2929;
@@ -2810,7 +2810,7 @@ colorswatch#add-color-button {
   colorswatch#add-color-button:hover {
     color: #342828;
     border-color: #cfd6e6;
-    background-color: white; }
+    background-color: #f0f0f0; }
   colorswatch#add-color-button overlay {
     border-color: transparent;
     background-color: transparent;
@@ -2833,7 +2833,7 @@ colorchooser .popover.osd {
 .scale-popup button:hover {
   color: #342828;
   border-color: #cfd6e6;
-  background-color: white; }
+  background-color: #f0f0f0; }
 
 .context-menu, popover.touch-selection, .csd popover.touch-selection, popover.background.touch-selection, .csd popover.background.touch-selection {
   font: initial; }
@@ -4129,7 +4129,7 @@ GtkListBox .h4 {
   #content_frame button:hover {
     color: #342828;
     border-color: #cfd6e6;
-    background-color: white; }
+    background-color: #f0f0f0; }
   #content_frame button:active, #content_frame button:checked {
     color: #f8f7f7;
     border-color: #AF2929;
